@@ -1,51 +1,5 @@
 mainmenu "Sandix/$ARCH $KERNELVERSION Kernel Configuration"
 
-config	X86_32
-	bool "32-bit x86 kernel"
-	---help---
-	  Say yes to build a 32-bit kernel - formerly known as i386
-
-config	X86_64
-	bool "64-bit x86 kernel"
-	depends on !X86_32
-	---help---
-	  Say yes to build a 64-bit kernel - formerly known as x86_64
-
-
-menu	"Processor type and features"
-
-config	SMP
-	bool "Symmetric multi-processing support"
-	---help---
-	  This enables support for systems with more than one CPU. If you have
-	  a system with only one CPU, say N. If you have a system with more
-	  than one CPU, say Y.
-
-	  If you say N here, the kernel will run on uni- and multiprocessor
-	  machines, but will use only one CPU of a multiprocessor machine. If
-	  you say Y here, the kernel will run on many, but not all,
-	  uniprocessor machines. On a uniprocessor machine, the kernel
-	  will run faster if you say N here.
-
-	  Note that if you say Y here and choose architecture "586" or
-	  "Pentium" under "Processor family", the kernel will not work on 486
-	  architectures. Similarly, multiprocessor kernels for the "PPro"
-	  architecture may not work on all Pentium based boards.
-
-	  People using multiprocessor machines who say Y here should also say
-	  Y to "Enhanced Real Time Clock Support", below. The "Advanced Power
-	  Management" code will be disabled if you say Y here.
-
-	  See also <file:Documentation/x86/i386/IO-APIC.txt>,
-	  <file:Documentation/nmi_watchdog.txt> and the SMP-HOWTO available at
-	  <http://www.tldp.org/docs.html#howto>.
-
-	  If you don't know what to do here, say N.
-
-endmenu
-
-
-menu	"Locking"
 
 config	DEBUG_SPINLOCK
 	bool "Spinlock debug feature support"
@@ -54,4 +8,5 @@ config	DEBUG_SPINLOCK
 	  spinlocks, say Y.
 
 	  If you don't know what to do here, say N.
-endmenu
+
+source "arch/x86/Kconfig"
