@@ -6,4 +6,5 @@ obj-y := tty_io.o
 obj-y += tty_ldisc.o
 obj-y += n_tty.o
 
+# virtual terminal
 obj-y += vt/
