@@ -97,6 +97,8 @@ struct tty_ldisc_ops {
 	int		flags;
 	int		refcount;
 
+	void	(*open)(struct tty_struct *tty);
+	void	(*close)(struct tty_struct *tty);
 	ssize_t	(*read)(struct tty_struct *tty, char __user *buf, size_t count);
 	ssize_t	(*write)(struct tty_struct *tty, const unsigned char __user *buf, size_t count);
 	void	(*set_termios)(struct tty_struct *tty, struct termios *old);
@@ -287,5 +289,10 @@ int tty_register_ldisc(int disc, struct tty_ldisc_ops *new_ldisc);
 int tty_unregister_ldisc(int disc);
 struct tty_ldisc *tty_ldisc_ref_wait(struct tty_struct *tty);
 void tty_ldisc_deref(struct tty_ldisc *ld);
+
+/*
+ * N_TTY line discipline
+ */
+extern const struct tty_ldisc_ops tty_ldisc_N_TTY;
 
 #endif /* _SANDIX_TTY_H_ */
