@@ -319,3 +319,12 @@ Wed Jan 13 10:59:20 CST 2016
 - [M] include/sandix/spinlock_up.h		[D] Finished
 - [M] include/sandix/spinlock_smp.h
 - [M] include/sandix/spinlock.h			[D] Generic spinlock APIs
+
+
+Thu Jan 14 14:14:17 CST 2016
+- [+] include/sandix/err.h			[D] IS_ERR things
+- [+] scripts/Lindent
+- [M] arch/x86/include/asm/spinlock.h		[D] basic spinlock finished
+- [M] drivers/tty/tty_ldisc.c
+- [M] drivers/tty/n_tty.c			[D] new functions
+- [M] include/sandix/tty.h			[D] new ldisc_ops: open, close
